// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post navigation teaser should render all that is required 1`] = `
<nav
  className="post navigation teaser"
>
  <aside
    className="previous"
  >
     
    <a
      className="nav-link"
      href="/previous"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="Previous"
    >
      <h1>
        Previous
      </h1>
      <div
        className="body"
      >
        <span
          className="text"
        >
          Excerpt
        </span>
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2018-04-01T00:00:00.000Z"}
        >
          Sunday, 1 April 2018
        </time>
         
        <span
          data-container="metadata-author"
        >
          by Clarice Bouwer
        </span>
         
        <span
          data-container="metadata-ttr"
        >
          (Est. 12 minute read)
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/douglas"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Douglas"
      >
        douglas
      </a>
       
       
      <a
        className="tag"
        href="/tag/adams"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Adams"
      >
        adams
      </a>
       
    </div>
  </aside>
  <aside
    className="next"
  >
     
    <a
      className="nav-link"
      href="/next"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="Next"
    >
      <h1>
        Next
      </h1>
      <div
        className="body"
      >
        <span
          className="text"
        >
          Excerpt
        </span>
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2018-04-01T00:00:00.000Z"}
        >
          Sunday, 1 April 2018
        </time>
         
        <span
          data-container="metadata-author"
        >
          by Clarice Bouwer
        </span>
         
        <span
          data-container="metadata-ttr"
        >
          (Est. 15 minute read)
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/douglas"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Douglas"
      >
        douglas
      </a>
       
       
      <a
        className="tag"
        href="/tag/adams"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Adams"
      >
        adams
      </a>
       
    </div>
  </aside>
</nav>
`;

exports[`Post navigation teaser should render everything else 1`] = `
<nav
  className="post navigation teaser"
>
  <aside
    className="previous"
  >
     
    <a
      className="nav-link"
      href="/previous"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="Don't panic."
    >
      <h1>
        Don't panic.
      </h1>
      <div
        className="body"
      >
        <span
          className="text"
        >
          Earthman Arthur Dent is rescued by his friend, Ford Prefect—an...
        </span>
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2018-04-01T00:00:00.000Z"}
        >
          Sunday, 1 April 2018
        </time>
         
        <span
          data-container="metadata-author"
        >
          by Pixie
        </span>
         
        <span
          data-container="metadata-ttr"
        >
          (Est. 1 minute read)
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/douglas"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Douglas"
      >
        douglas
      </a>
       
       
      <a
        className="tag"
        href="/tag/adams"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Adams"
      >
        adams
      </a>
       
    </div>
  </aside>
  <aside
    className="next"
  >
     
    <a
      className="nav-link"
      href="/next"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="Come to the dark side."
    >
      <h1>
        Come to the dark side.
      </h1>
      <div
        className="body"
      >
        <span
          className="text"
        >
          Luke Skywalker's peaceful and solitary existence gets upended when he...
        </span>
      </div>
      <div
        className="metadata"
      >
        posted on
         
        <time
          dateTime={"2019-04-01T00:00:00.000Z"}
        >
          Monday, 1 April 2019
        </time>
         
        <span
          data-container="metadata-author"
        >
          by Elby
        </span>
         
        <span
          data-container="metadata-ttr"
        >
          (Est. 2 minute read)
        </span>
      </div>
    </a>
     
    <div
      className="tags"
    >
       
      <a
        className="tag"
        href="/tag/star"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="star"
      >
        star
      </a>
       
       
      <a
        className="tag"
        href="/tag/wars"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="wars"
      >
        wars
      </a>
       
    </div>
  </aside>
</nav>
`;
